Ikke klar til forelesning 15.08 enda

--- a/notebooks/1 - Introduksjon.ipynb
+++ b/notebooks/1 - Introduksjon.ipynb
@@ -23,7 +23,7 @@
     "tags": []
    },
    "source": [
-    "# **Om kurset**\n",
+    "# **Om kurset (ikke ferdig)**\n",
     "Python-lab (BED-1504/BED-1304) er et kurs som omhandler grunnleggende programmeringsferdigheter i Python. Samtidig vil det være forankret mot økonomiske problemstillinger, særlig mot studenter som studerer samfunnsøkonomi, økonomi og adminstrasjon og lignende. Det vil være en fordel om du har jobbet med programmering før, hvis ikke - så skal dette gå helt fint. I løpet av dette kurset skal dere få grunnleggende ferdigheter i programmering i Python, og hvordan dere kan behandle data til noe meningsfylt.\n",
     "\n",
     "Dette blir artig!\n",
