Oppdatert - endra oppgave forelesning 6

--- a/notebooks/6 - Logikk_løkker.ipynb
+++ b/notebooks/6 - Logikk_løkker.ipynb
@@ -910,7 +910,7 @@
     "Under kommer flere oppgaver dere kan jobbe med som tar opp if/else/for/while. Dette er gode forberedelser til eksamen, med å forstå grunnleggende prinsipper i Python.\n",
     "\n",
     "## Oppgave 1\n",
-    "Les inn csv.-filen, ```'schooling-gdp.csv'```, som en dataframe ved hjelp av Pandas."
+    "Les inn csv.-filen, ```'bilparken_ssb.csv'```, som en dataframe ved hjelp av Pandas."
    ]
   },
   {
