--- a/oppgaver/Seminar6-Logikk_løkker.ipynb
+++ b/oppgaver/Seminar6-Logikk_løkker.ipynb
@@ -72,7 +72,7 @@
     "* Mellom **200,000 kr** - **500,000 kr**: **20% skatt**\n",
     "* Over **500,000 kr**: **35% skatt**\n",
     "\n",
-    "Lag en `if`/`elif`/`else` setning, som tar inn `inntekt` og `betalingsanmerkning` (\"ja\" eller \"nei\"), og beregner hvor mye man må betale i skatt."
+    "Lag en `if`/`elif`/`else` setning, som tar inn `inntekt`, og beregner hvor mye man må betale i skatt."
    ]
   },
   {
