--- a/oppgaver/Seminar7.1_Matplotlib.ipynb
+++ b/oppgaver/Seminar7.1_Matplotlib.ipynb
@@ -44,7 +44,7 @@
     "| Exam_Score                      | Endelig eksamensresultat.                                                     |\n",
     "\n",
     "\n",
-    "Datasettet finner dere her: **Legg inn lenke!!** "
+    "Datasettet finner dere her: [StudentPerformanceFactors](https://github.com/uit-bed-1304-h25/uit-bed-1304-h25.github.io/blob/main/data/StudentPerformanceFactors.csv) "
    ]
   },
   {
