Repetisjon Pandas Matplotlib Oppgaveregning

--- a/notebooks/Repetisjon_Pandas_Plot.ipynb
+++ b/notebooks/Repetisjon_Pandas_Plot.ipynb
@@ -1059,7 +1059,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Oppgave 2\n",
+    "## Oppgave 2 - Boligpriser\n",
     "Kjør cellen under for å laste inn datasettet *Median_totalpris_boliger_Oslo.csv*.\n",
     "\n",
     "1. Sjekk hvilke variabeltype de ulike kolonnene består av.\n",
@@ -1105,7 +1105,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Oppgave 3\n",
+    "## Oppgave 3 - Lønn i ulike yrkesgrupper\n",
     "Dere skal se på det fiktive datasettet under, som omhandler tre yrkesgrupper, deres lønninger, sivilstand og lignende.\n",
     "\n",
     "Dere skal følgende.\n",
